Распознавание вторжений в БД
asdfadsf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,6 +37,15 @@
 	url = {https://www.twirpx.com/file/1706071/}
 }
 
+@book{ExpertSystems,
+	author    = {{Никулин А.Н.}},
+	title     = {{Экспертные системы}},
+	publisher = {Ульяновск, УлГТУ},
+	year      = 2015,
+	isbn      = {978-5-9795-1489-5},
+	url = {http://venec.ulstu.ru/lib/disk/2016/75.pdf}
+}
+
 
 @online{Lihonosov2011,
     author = {{Лихоносов А. Г.}},
