--- a/db.tex
+++ b/db.tex
@@ -19,7 +19,7 @@
 \input{part/availability}
 \input{part/distributed}
 \input{part/statistical}
-%\input{part/intrusion}
+\input{part/intrusion}
 %\input{part/security}
 %\input{part/ref}
 \printbibliography
