--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,20 +1,136 @@
 \section{Распознавание вторжений в БД}
 \subsection{Основные понятия}
-\paragraph{Определение понятия распознавания вторжений}
-\paragraph{Цели выявления злоупотреблений}
-\paragraph{Место процедуры распознавания вторжений в общей системе защиты}
+
+\textbf{Обнаружение вторжений} -- это сбор и анализ информации из различных точек защищаемой компьютерной системы (вычислительной сети) для выявления как попыток нарушения, так и реальных нарушений защиты (вторжений).
+
+
+Среди методов, используемых в подсистемах анализа современных систем обнаружения вторжений (СОВ), можно выделить два направления:
+\begin{itemize}
+	\item обнаружение аномалий в защищаемой системе
+	\item поиск злоупотреблений
+\end{itemize}
+
+\textbf{Цели выявления злоупотреблений} -- поиск шаблонов известных атак. В качестве искомого шаблона может выступать последовательность событий, паттерны сетевого трафика различных протоколов, определенные ассемблерные команды и т.д.
+
+\textbf{Место процедуры распознавания вторжений в общей системе защиты} -- обнаружение и регистрация атак, а также оповещение при срабатывании определенного правила.
 
 \subsection{Системы распознавания вторжений}
-\paragraph{Типы моделей систем распознавания вторжений (ID-систем)}
-\paragraph{Общая структура ID-систем}
+
+\textbf{Системы обнаружения и предотвращения вторжений (IPS/IDS)} -- это комплекс программных или аппаратных средств, которые выявляют факты и предотвращают попытки несанкционированного доступа в корпоративную систему.
+
+\subsubsection*{Типы моделей систем распознавания вторжений (ID-систем)}
+
+Системы обнаружения и предотвращения разделяют на:
+
+\begin{itemize}
+	\item \textbf{Сетевые (NIDS)} -- проверке подвергается сетевой трафик с концентратора или коммутатора
+	\item \textbf{Основанные на протоколах (PIDS)} -- предполагает наблюдение за HTTP- и HTTPS-протоколами
+	\item \textbf{Основанные на прикладных протоколах (APIDS)} -- в таких системах проверяются специализированные прикладные протоколы. Например, на веб-сервере с SQL базой данных СОВ будет отслеживать содержимое SQL команд, передаваемых на сервер.
+	\item \textbf{Узловые Host-Based (HIDS)} -- подвергают анализу журналы приложений, состояния хостов, а также системные вызовы.
+	\item \textbf{Гибридные} -- являются композицией нескольких видов систем обнаружения вторжений.
+\end{itemize}
+
+\paragraph{Общая структура ID-систем} 
+
+\subsubsection*{Концептуальная схема систем обнаружения вторжений включает в себя:}
+\begin{itemize}
+	\item Подсистему сбора событий (сенсорную)
+	\item Подсистему анализа данных, полученных от сенсорной подсистемы
+	\item Подсистему хранения событий
+	\item Консоль администрирования
+\end{itemize}
+
 \paragraph{Шаблоны классов пользователей}
+
 \paragraph{Модели известных атак}
+\begin{itemize}
+	\item Необычные запросы и команды администрирования SQL сервера, часто употребляемые взломщиками (DROP, CREATE и т.д.)
+	\item Незаконные операции DELETE, UPDATE и INSERT
+	\item Запросы, содержащие id администратора
+	\item Обращение к служебным таблицам и скрытым данным
+	\item Запросы, всегда возвращающие TRUE
+	\item Попытка обнулить поля с паролем
+	\item Внедрение в запросе OR, сравнения констант и другое
+\end{itemize}
 
 \subsection{Экспертные ID-системы}
+
+Технологию построения экспертных систем часто называют инженерией знаний. Как правило, этот процесс требует специфической формы взаимодействия создателя экспертной системы, которого называют инженером знаний, и одного или нескольких экспертов в некоторой предметной области.  Инженер знаний <<извлекает>> из экспертов процедуры, стратегии,  эмпирические правила, которые они используют при решении задач, и  встраивает эти знания в экспертную систему. В результате появляется   компьютерная программа, которая решает задачи во многом так же, как   эксперты -- люди \autocite{ExpertSystems}.
+
+В экспертных системах могут использоваться импликационные правила (Если [условие] то [действие]). Например:
+\begin{itemize}
+	\item ЕСЛИ с одного узла за время T поступает N пакетов, ТО записать в лог факт: происходит DoS атака (факт А)
+	\item Если наблюдается более чем N фактов А, ТО записать в лог факт: происходит DDoS атака
+\end{itemize}
+
 \paragraph{Метрики}
-\paragraph{Статистические модели}
-\paragraph{Профили}
+
+\begin{itemize}
+	\item \textbf{Показатель активности} -- величина, при превышении которой активность подсистемы оценивается как быстро прогрессирующая. В общем случае используется для обнаружения аномалий, связанных с резким ускорением в работе. Пример: среднее число записей аудита, обрабатываемых для элемента защищаемой системы в единицу времени.
+	\item \textbf{Распределение активности в записях аудита} -- распределение во всех типах активности в актуальных записях аудита. Здесь под активностью понимается любое действие в системе, например, доступ к файлам, операции ввода-вывода.
+	\item \textbf{Измерение категорий} -- распределение определенной активности в категории\footnotemark. Например, относительная частота количества регистраций в системе (логинов) из каждого физического места нахождения. Предпочтения в использовании программного обеспечения системы (почтовые службы, компиляторы, командные интерпретаторы, редакторы и т.д.)
+	\item \textbf{Порядковые измерения} -- используется для оценки активности, поступающей в виде цифровых значений. Например, количество операция ввода-вывода, инициируемых каждым пользователем. Порядковые изменения вычисляют общую числовую статистику значений определенной активности, в то время как измерение категорий подсчитывает количество активностей.
+\end{itemize}
+
+\footnotetext{Здесь под \textit{категорией} понимается группа подсистем, объединенных по некоему общему принципу}
+
+\subsubsection*{Статистические модели}
+
+При обнаружении аномалий с использованием профайла в основном применяют статистические методы оценки. Процесс обнаружения происходит следующим образом: текущие значения измерений профайла сравнивают с сохраненными значениями. Результат сравнения - показатель аномальности в измерении. Общий показатель аномальности в простейшем случае может вычисляться при помощи некоторой общей функции от значений показателя аномалии в каждом измерении профайла.
+
+Например, пусть $M_1, M_2, \dots, M_n$ -- измерения профайла, а $S_1, S_2, \dots, S_n$ -- соответственно представляют собой значения аномалии каждого из измерений. Чем больше число $S_i$, тем больше аномалии в $i$-ом показателе. Объединяющая функция может быть взвешенной суммой их квадратов:
+
+\begin{equation}
+	a_1s_1^2 + a_2s_2^2 + \dots + a_ns_n^2 > 0,
+\end{equation}
+
+где $a_i$ -- отражает относительный вес метрики $M_i$.
+
+Параметры $M_1, M_2, \dots, M_n$ могут быть зависимыми друг от друга. В таком случае, объединяющая функция будет более сложной.
+
+\subsubsection*{Профили}
+
+Одним из способов формирования <<образа>> нормального поведения системы состоит в накоплении измерений значения параметров оценки в специальной структуре данных. Эта структура данных называется \textit{профайлом}. 
+
+Основные требования, предъявляемые к структуре профайла:
+\begin{itemize}
+	\item Минимальный конечный размер
+	\item Быстрое выполнение операции обновления
+\end{itemize}
+
 \paragraph{Примеры ID-систем}
+\begin{enumerate}
+	\item \textbf{GreenSQL-FW}. Работает как прокси-сервер между веб-приложением и SQL сервером. Анализирует SQL команды на предмет аномальных запросов.
+	
+	GreenSQL поддерживает несколько режимов работы:
+	\begin{itemize}
+		\item \textbf{Simulation Mode} -- пассивная система обнаружения атак (IDS). Протоколирует SQL запросы, выдает предупреждения на консоль управления.
+		\item \textbf{Blocking Suspicious Commands} -- активная СОА. Атаки не только обнаруживаются, но и блокируются (IPS) в соответствии с установленными правилами, указывающими на аномальность запроса.
+		\item \textbf{Active protection from unknown queries} -- блокирование всех неизвестных запросов (db firewall)
+		\item \textbf{Learning mode} -- предназначен для прогона и настройки правил в <<чистой>> среде, что позволяет сформировать белый список и предотвратить в последствии ложные срабатывания анализатора запросов.
+	\end{itemize}
+	
+	\item \textbf{Snort} -- свободная сетевая система предотвращения вторжений (IPS) и обнаружения вторжений (IDS) с открытым исходным кодом, способная выполнять регистрацию пакетов и в реальном времени осуществлять анализ трафика в IP-сетях. Способна выявлять атаки на SQL базы данных. 
+
+	Особенности Snort:
+	\begin{itemize}
+		\item Возможность написания собственных правил
+		\item Расширение функциональности с помощью подключения дополнительных модулей
+		\item Гибкая система оповещения об атаках: Log-файлы, устройства вывода, БД и прочие
+	\end{itemize}
+	
+\end{enumerate}
 
 \subsection{Развитие систем распознавания вторжений}
-\paragraph{Основные тенденции}
+
+Дальнейшие направления совершенствования связаны с внедрением в теорию и практику СОВ общей теории систем, методов синтеза и анализа информационных систем, конкретного аппарата теории распознавания образов. Эти разделы теории предполагают получение конкретных методов исследования для области систем СОВ.
+
+До настоящего времени не описана СОВ как подсистема информационной системы в терминах общей теории систем. Необходимо обосновать показатель качества СОВ, элементный состав СОВ, ее структуру и взаимосвязи с информационной системой.
+
+В связи с наличием значительного количества факторов различной природы, слаженная работа информационной системы и СОВ имеет вероятностный характер. Вследствие этого актуальным является обоснование вида вероятностных законов конкретных параметров функционирования. Особо следует выделить задачу обоснования функции потерь информационной системы, задаваемую в соответствии с ее целевой функцией на области параметров функционирования системы. При этом целевая функция должна быть определена не только на экспертном уровне, но и в соответствии с совокупностью параметров функционирования всей информационной системы и задачами, возложенными на нее. В таком случае показатель качества СОВ будет определяться как один из параметров, влияющих на целевую функцию, а его допустимые значения -- допустимыми значениями функции потерь.
+
+После обоснования законов и функций, реальной задачей является получение оптимальной структуры СОВ в виде совокупности математических операций с помощью формализованных методов. Таким образом, может быть решена задача синтеза структуры СОВ. На основе полученных математических операций можно будет рассчитать зависимости показателей качества функционирования СОВ от параметров ее функционирования, а также от параметров функционирования информационной системы, то есть, будет возможен реальный анализ качества функционирования СОВ.
+
+Сложность применения формализованного аппарата анализа и синтеза информационных систем к СОВ заключается в том, что конкретные реализации информационного комплекса и его подсистемы - СОВ состоят из разнородных элементов, которые могут описываться различными разделами теории (системами массового обслуживания, конечными автоматами, теорией вероятности, теорией распознавания образов и т.д.), то есть, рассматриваемый объект исследования является составным. В результате, математические модели, по-видимому, можно получить только для отдельных составных частей СОВ, что затрудняет анализ и синтез СОВ в целом. Однако, дальнейшая конкретизация применения формализованного аппарата анализа и синтеза позволит оптимизировать СОВ.
+
+На основе изложенного можно сделать вывод о наличии в практической среде значительного опыта решения проблем обнаружения вторжений. Применяемые СОВ в значительной степени основаны на эмпирических схемах процесса обнаружения вторжений. Дальнейшее совершенствование СОВ связано с конкретизацией методов синтеза и анализа сложных систем, теории распознавания образов в применении к СОВ.
