--- a/bibliography.bib
+++ b/bibliography.bib
@@ -115,3 +115,102 @@
 	publisher = {Уфимский Государственный Авиационный Технический Университет},
 	year      = 2014,
 	}
+
+@article{Utebov2008,
+	author = {Утебов Д. Р., Белов С. В.},
+	journal = {Вестник Астраханского государственного технического университета},
+	number = {1},
+	year = {2008},
+	pages = {87--92},
+	title = {{Классификация угроз в системах управления базами данных}},
+	url = {https://cyberleninka.ru/article/n/klassifikatsiya-ugroz-v-sistemah-upravleniya-bazami-dannyh}
+}
+
+@book{Pirogov2009,
+	author    = {Пирогов}, 
+	title     = {{Информационные системы и базы данных: организация и проектирование}},
+	publisher = {БХВ-Петербург},
+	year      = 2009,
+	isbn      = {978-5-9775-0399-0},
+	url = {https://litmy.ru/knigi/os_bd/107950-informacionnye-sistemy-i-bazy-dannyh-organizaciya-i-proektirovanie.html}
+}
+@book{Karpova2009,
+	author    = {Карпова}, 
+	title     = {{Базы данных. Учебное пособие}},
+	publisher = {Питер},
+	year      = 2009,
+	isbn      = {978-5-94157-770-5},
+	url = {https://rucont.ru/file.ashx?guid=a46c217d-4dbd-496b-a229-2ac562197d70}
+}
+@book{Kirillov2009,
+	author    = {Кирилов}, 
+	title     = {{Введение в реляционные базы данных}},
+	publisher = {БХВ-Петербург},
+	year      = 2009,
+	isbn      = {978-5-496-00546-3},
+	url = {https://mipt.ru/dnbic/content/db.pdf}
+}
+@book{Date2005,
+	author    = {Дейт}, 
+	title     = {{Введение в системы баз данных}},
+	publisher = {Вильямс},
+	year      = 2005,
+	isbn      = {5-8459-0788-8},
+	url = {http://tc.kpi.ua/content/lib/vvedenie_v_sistemy_baz_dannyh_8izdanie.pdf}
+}
+@online{Oracle,
+    author = {Sql-oracle}},
+    title = {{Представления словаря данных}},
+    url = {http://sql-oracle.ru/predstavleniya-slovarya-dannyx.html},
+    urldate = {2020-05-30},
+    year={2014}
+}
+@online{Serial,
+    author = {{Citforum}},
+    title = {{Транзакции и целостность баз данных}},
+    url = {http://citforum.ru/database/dblearn/dblearn09.shtml},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{Intuit,
+    author = {{Intuit}},
+    title = {{Лекция 11: Модели транзакций}},
+    url = {https://www.intuit.ru/studies/professional_retraining/953/courses/297/lecture/7419?page=4},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{IntuitTrigg,
+    author = {{Intuit}},
+    title = {{Лекция 14: Триггеры: создание и применение}},
+    url = {https://www.intuit.ru/studies/courses/5/5/lecture/148},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{Wiki,
+    author = {{Wikipedia}},
+    title = {{Двухфазная блокировка}},
+    url = {https://ru.wikipedia.org/wiki/Двухфазная_блокировка},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{WikiLink,
+    author = {{Wikipedia}},
+    title = {{Ссылочная целостность}},
+    url = {https://ru.wikipedia.org/wiki/Ссылочная_целостность},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{TransCit,
+    author = {{Citforum}},
+    title = {{Двухфазная блокировка}},
+    url = {https://ru.wikipedia.org/wiki/Двухфазная_блокировка},
+    urldate = {2020-05-30},
+    year={2020}
+}
+@online{OSP,
+    author = {{Jet Infosystems}},
+    title = {{Системы управления базами данных - коротко о главном}},
+    url = {https://www.osp.ru/news/articles/1995/0402/13031414#part_4},
+    urldate = {2020-05-30},
+    year={1995}
+}
