Add new chapters

--- a/part/basis.tex
+++ b/part/basis.tex
@@ -32,28 +32,108 @@
 
 \subsubsection{Понятие политики безопасности}
 Политика безопаности -- это набор законов, правил, процедур и норм поведения, определяющих, как организация обрабатывает, защищает и распространяет информацию. Причём, политика безопасности относится к активным методам защиты, поскольку учитывает анализ возможных угроз и выбор адекватных мер противодействия.
-\subsubsection{Совместное применение различных политик безопасности в рамках единой модели[None]}
-\subsubsection{Интерпретация TCSEC для надежных СУБД (TDI)[None]}
-\subsubsection{Оценка надежности СУБД как компоненты вычислительной системы[None]}
+
+\subsubsection{Совместное применение различных политик безопасности в рамках единой модели}
+Проблема совмещения различных политик безопасности возникает достаточно часто при администрировании компьютерных систем. Стандарты защиты информации в автоматизированных системах подразумевают наличие более одной политики разграничения доступа. 
+
+Так, в «Оранжевой книге» использование только дискреционного разделения доступа относит компьютерную систему к одному из классов безопасности группы «C», тогда как добавление мандатного контроля доступа позволяет претендовать на более высокий класс защищенности группы «B». Причем «Оранжевой книгой» подразумевается именно добавление мандатной политики безопасности (МПБ) с сохранением возможностей дискреционной политики безопасности (ДПБ).
+
+В качестве еще одного примера совмещения политик безопасности можно привести системы управления базами данных, функционирующие на базе операционных систем семейства Windows. В системах управления базами данных наиболее распространенной является ролевая политика безопасности, но при этом данные хранятся в файлах, доступ к которым разграничивается операционной системой. В операционных системах базовой является ДПБ, но при этом реализуется на определенном уровне МПБ. Таким образом, требуется сопряжение трех различных политик безопасности.
+
+\subsubsection{Интерпретация TCSEC для надежных СУБД (TDI)}
+В дополнение к «Оранжевой книге» TCSEC, регламентирующей вопросы обеспечения безопасности в ОС, существуют аналогичный документ Национального центра компьютерной безопасности США для СУБД -- TDI, («Пурпурная книга»).
+
+\subsubsection{Оценка надежности СУБД как компоненты вычислительной системы}
 \subsubsection{Монитор ссылок}
 Контроль за выполнением субъектами (пользователями) определённых операций над объектами, путем проверки допустимости обращения (данного пользователя) к программам и данным разрешенному набору действий.
+
 Обязательные качества для монитора обращений:
 \begin{itemize}
 	\item Изолированность (неотслеживаемость работы)
 	\item Полнота (невозможность обойти)
 	\item Верифицируемость (возможность анализа и тестирования)
 \end{itemize}
-\subsubsection{Применение TCSEC к СУБД непосредственно[None]}
+
+\subsubsection{Применение TCSEC к СУБД непосредственно}
 \subsubsection{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
 https://web.archive.org/web/20160303230445/http://ftp.fas.org/irp/nsa/rainbow/tg021.htm
 \subsubsection{Критерии безопасности ГТК}
 https://fstec.ru/component/attachments/download/293
+
+
 \subsection{Модели безопасности в СУБД}
-\paragraph{Дискреционная (избирательная) и мандатная (полномочная) модели безопасности}
-\paragraph{Классификация моделей}
-\paragraph{Аспекты исследования моделей безопасности}
-\paragraph{Особенности применения моделей безопасности в СУБД}
-\paragraph{Дискреционные модели: HRU, Take-Grant, Action-Entity, Wood}
-\paragraph{Мандатные модели: Bell-LaPadula, Biba, Dion, Sea View, Jajodia\&Sandhu, Smith\&Winslett, решеточная}
-\paragraph{БД с многоуровневой секретностью (MLS)}
-\paragraph{Многозначность}
+\subsubsection{Дискреционная модель безопасности}
+Матричная или дискреционная модель является наиболее простой и распространённой. Она строится по следующим принципам:
+\begin{itemize}
+	\item В системе определяются субъекты и объекты
+	\item Задаются права доступа для каждого сочетания «субъект+объект»
+\end{itemize}
+Отношения между субъектами объектами можно представить в виде матрицы доступа (access matrix), в строках которой перечислены субъекты, в заголовках столбцов перечислены объекты, а в ячейках (на пересечении строк и столбцов) указываются разрешенные виды доступа.
+
+Виды доступа могут быть определены в каждом случае индивидуально.
+
+Недостатками матричной модели являются ее статичность и чрезмерно детализированный способ указания отношений между субъектами и объектами.
+
+При большом количестве пользователей администрирование такой системы усложняется, что приводит к возникновению ошибок.
+
+Но основной недостаток матричной модели заключается в том, что субъект, имеющий право на чтение информации может передать эту информацию другим субъектам, без уведомления владельца объекта. Кроме того, не всегда можно назначить владельца каждому объекту (объекты часто принадлежат не отдельным субъектам, а всей системе).
+
+Статичность модели препятствует быстрому внесению изменений в систему, например, при увольнении/найме новых сотрудников или при смене их должности/переводу в другое подразделение.
+Кроме того, для получения полного доступа к системе злоумышленнику достаточно узнать данные учетной записи пользователя. 
+
+\subsubsection{Мандатная модель безопасности}
+
+Многоуровневые или мандатные модели доступа были разработаны с целью устранения недостатков матричных моделей.
+В многоуровневой модели задается порядок следования уровней доступа и уровней секретности, а затем устанавливаются связи между уровнем доступа и уровнем секретности.
+Эти связи, устанавливающие разрешение на доступ, называются мандатными.
+При создании системы безопасности с использованием мандатной модели необходимо:
+\begin{itemize}
+    \item Определить все объекты в системе, к которым необходимо предоставить доступ;
+    \item Составить список субъектов, получающих доступ к объектам;
+    \item Разбить все объекты на группы по уровню конфиденциальности (секретности);
+    \item Создать группы для субъектов, различающиеся по уровню доступа (установить формы допуска);
+    \item Установить для каждого субъекта уровень доступа (выдать им формы допуска);
+    \item Определить все возможные виды разрешений на доступ;
+    \item Установить связи (в виде разрешений на доступ) между группами субъектов и группами объектов.
+\end{itemize}
+Вторая задача, решаемая с помощью мандатной модели – предотвращение утечки информации от субъектов и объектов с высоким уровнем доступа к субъектам и объектам с более низким уровнем доступа.
+
+Очевидно, что субъект с низким уровнем доступа не должен получать
+доступ к объектам с более высоким уровнем секретности.
+
+Менее очевидно то, что субъект с высоким уровнем доступа не должен иметь полного доступа к объектам с меньшим уровнем секретности.
+
+Проблема заключается в том, что информация, полученная субъектом с высоким уровнем доступа, может быть (случайно или намеренно) передана им объекту с более низким уровнем доступа.
+
+Например, субъект, получивший легальный доступ к объекту (документу) с уровнем «Совершенно секретно», не должен иметь возможность скопировать текст, содержащий совершенно секретную информацию, и записать его в объект (документ) с более низким уровнем «Секретно», так как таким образом субъекты с уровнем доступа «Секретно» получат доступ к совершенно секретным данным. 
+
+\subsubsection{Классификация моделей безопасности}
+
+\begin{itemize}
+    \item Модели систем дискреционного разграничения доступа;
+    \item Модели систем мандатного разграничения доступа;
+    \item Модели безопасности информационных потоков;
+    \item Модели ролевого разграничения доступа;
+    \item Субъектно-ориентированная модель изолированной программной среды.
+\end{itemize}
+
+\subsubsection{Аспекты исследования моделей безопасности }
+\subsubsection{Особенности применения моделей безопасности в СУБД }
+
+\subsubsection{Дискреционные модели}
+\paragraph{HRU}
+\paragraph{Take-Grant}
+\paragraph{Action-Entity}
+\paragraph{Wood}
+
+\subsubsection{Мандатные модели}
+\paragraph{Bell-LaPadula}
+\paragraph{Biba}
+\paragraph{Dion}
+\paragraph{Sea View}
+\paragraph{Jajodia\&Sandhu}
+\paragraph{Smith\&Winslett}
+\paragraph{Решеточная}
+
+\subsubsection{БД с многоуровневой секретностью (MLS)}
+\subsubsection{Многозначность}
