--- a/db.tex
+++ b/db.tex
@@ -14,17 +14,14 @@
 \tableofcontents
 
 \input{part/concept}
-
-\input{part/basis}
+%\input{part/basis}
 \input{part/integrity}
-\input{part/confidentiality}
-
+%\input{part/confidentiality}
 \input{part/availability}
 \input{part/distributed}
 \input{part/statistical}
 \input{part/intrusion}
-
-\input{part/security}
+%\input{part/security}
 %\input{part/ref}
 \printbibliography
 \end{document}
