--- a/preamble.tex
+++ b/preamble.tex
@@ -4,7 +4,7 @@
 \usepackage[T2A]{fontenc}			% кодировка
 \usepackage[utf8]{inputenc}			% кодировка исходного текста
 \usepackage[english,russian]{babel}	% локализация и переносы
-
+\usepackage{listings}
 \usepackage{extsizes} % Возможность сделать 14-й шрифт
 \usepackage{indentfirst}
 % \frenchspacing
