--- a/db.tex
+++ b/db.tex
@@ -16,7 +16,7 @@
 \input{part/concept}
 \input{part/basis}
 \input{part/integrity}
-%\input{part/confidentiality}
+\input{part/confidentiality}
 \input{part/availability}
 \input{part/distributed}
 \input{part/statistical}
