--- a/db.tex
+++ b/db.tex
@@ -21,7 +21,7 @@
 \input{part/distributed}
 \input{part/statistical}
 \input{part/intrusion}
-%\input{part/security}
-%\input{part/ref}
+\input{part/security}
+\input{part/ref}
 \printbibliography
 \end{document}
