--- a/part/basis.tex
+++ b/part/basis.tex
@@ -15,7 +15,7 @@
 	\item Политика безопасности
 	\begin{itemize}
 		\item \textbf{Политика безопасности}
-		Система должна поддерживать точно определённую политику безопасности. Возможность осуществления субъектами доступа к объектам должна определяться на основе их идентификации и набора правил управления доступом. Там, где необходимо, должна использоваться политика нормативного управления доступом, позволяющая эффективно реализовать разграничение доступа к категорированной информации (информации, отмеченной грифом секретности — типа "секретно", "сов. секретно" и т.д.).
+		Система должна поддерживать точно определённую политику безопасности. Возможность осуществления субъектами доступа к объектам должна определяться на основе их идентификации и набора правил управления доступом. Там, где необходимо, должна использоваться политика нормативного управления доступом, позволяющая эффективно реализовать разграничение доступа к категорированной информации (информации, отмеченной грифом секретности — типа <<секретно>>, <<сов. секретно>> и т.д.).
 		\item \textbf{Метки} С объектами должны быть ассоциированы метки безопасности, используемые в качестве атрибутов контроля доступа. Для реализации нормативного управления доступом система должна обеспечивать возможность присваивать каждому объекту метку или набор атрибутов, определяющих  степень конфиденциальности (гриф секретности) объекта и/или режимы доступа к этому объекту.
 	\end{itemize}
 	\item Аудит
@@ -25,7 +25,7 @@
 	\end{itemize}
 	\item Корректность
 	\begin{itemize}
-		\item \textbf{Контроль корректности} Средства защиты должны содержать независимые аппаратные и/или программные компоненты, обеспечивающие работоспособность функций защиты. Это означает, что все средства защиты, обеспечивающие политику безопасности, управление атрибутами и метками безопасности, идентификацию и аутентификацию, регистрацию и учёт, должны находиться под контролем средств, проверяющих корректность их функционирования. Основной принцип контроля корректности состоит в том, что средства контроля должны быть полностью независимы от средств защиты.
+		\item \textbf{Контроль корректности} Средства защиты должны содержать независимые аппаратные и~/~или программные компоненты, обеспечивающие работоспособность функций защиты. Это означает, что все средства защиты, обеспечивающие политику безопасности, управление атрибутами и метками безопасности, идентификацию и аутентификацию, регистрацию и учёт, должны находиться под контролем средств, проверяющих корректность их функционирования. Основной принцип контроля корректности состоит в том, что средства контроля должны быть полностью независимы от средств защиты.
 		\item \textbf{Непрерывность защиты} Все средства защиты (в т.ч. и реализующие данное требование) должны быть защищены от несанкционированного вмешательства и/или отключения, причем эта защита должна быть постоянной и непрерывной в любом режиме функционирования системы защиты и компьютерной системы в целом. Данное требование распространяется на весь жизненный цикл компьютерной системы. Кроме того, его выполнение является одним из ключевых аспектов формального доказательства безопасности системы.
 	\end{itemize}	
 \end{enumerate}
@@ -36,12 +36,12 @@
 \subsubsection{Совместное применение различных политик безопасности в рамках единой модели}
 Проблема совмещения различных политик безопасности возникает достаточно часто при администрировании компьютерных систем. Стандарты защиты информации в автоматизированных системах подразумевают наличие более одной политики разграничения доступа. 
 
-Так, в «Оранжевой книге» использование только дискреционного разделения доступа относит компьютерную систему к одному из классов безопасности группы «C», тогда как добавление мандатного контроля доступа позволяет претендовать на более высокий класс защищенности группы «B». Причем «Оранжевой книгой» подразумевается именно добавление мандатной политики безопасности (МПБ) с сохранением возможностей дискреционной политики безопасности (ДПБ).
+Так, в <<Оранжевой книге>> использование только дискреционного разделения доступа относит компьютерную систему к одному из классов безопасности группы <<C>>, тогда как добавление мандатного контроля доступа позволяет претендовать на более высокий класс защищенности группы <<B>>. Причем <<Оранжевой книгой>> подразумевается именно добавление мандатной политики безопасности (МПБ) с сохранением возможностей дискреционной политики безопасности (ДПБ).
 
 В качестве еще одного примера совмещения политик безопасности можно привести системы управления базами данных, функционирующие на базе операционных систем семейства Windows. В системах управления базами данных наиболее распространенной является ролевая политика безопасности, но при этом данные хранятся в файлах, доступ к которым разграничивается операционной системой. В операционных системах базовой является ДПБ, но при этом реализуется на определенном уровне МПБ. Таким образом, требуется сопряжение трех различных политик безопасности.
 
 \subsubsection{Интерпретация TCSEC для надежных СУБД (TDI)}
-В дополнение к «Оранжевой книге» TCSEC, регламентирующей вопросы обеспечения безопасности в ОС, существуют аналогичный документ Национального центра компьютерной безопасности США для СУБД -- TDI, («Пурпурная книга»).
+В дополнение к <<Оранжевой книге>> TCSEC, регламентирующей вопросы обеспечения безопасности в ОС, существуют аналогичный документ Национального центра компьютерной безопасности США для СУБД -- TDI, (<<Пурпурная книга>>).
 
 \subsubsection{Оценка надежности СУБД как компоненты вычислительной системы}
 \subsubsection{Монитор ссылок}
@@ -56,9 +56,10 @@
 
 \subsubsection{Применение TCSEC к СУБД непосредственно}
 \subsubsection{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
-https://web.archive.org/web/20160303230445/http://ftp.fas.org/irp/nsa/rainbow/tg021.htm
+\href{https://web.archive.org/web/20160303230445/http://ftp.fas.org/irp/nsa/rainbow/tg021.htm}{Пурпурная книга}
 \subsubsection{Критерии безопасности ГТК}
-https://fstec.ru/component/attachments/download/293
+\href{https://fstec.ru/component/attachments/download/293}{ФСТЭКовская документация}
+
 
 
 \subsection{Модели безопасности в СУБД}
