Add main definitions: 1. Обнаружение вторжений 2. Классификация методов СОВ 3. Описание их применения

--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,18 +1,27 @@
 \section{Распознавание вторжений в БД}
 \subsection{Основные понятия}
 
-\textbf{Обнаружение вторжений} -- это сбор и анализ информации из различных точек защищаемой компьютерной системы (вычислительной сети) для выявления как попыток нарушения, так и реальных нарушений защиты (вторжений).
+\textbf{Обнаружение вторжений} -- процесс выявления действий, которые способны нарушить конфиденциальность, 
+целостность и доступность информации, хранимой в базе данных (БД).
 
+Применение систем обнаружения вторжения относится к реактивным мерам (то есть к таким мерам, которые 
+используются уже после того, как произошел инцидент) для противодействия активности злоумышленника в тех 
+случаях, когда злоумышленник преодолел все проактивные меры. Поэтому обычно системах обнаружения вторжений (СОВ) 
+являются \textit{вторичным фактором защиты в общей системе защиты} и предназначены для обнаружения и регистрации
+уже произошедних событий, а также оповещение персонала при срабатывании определенных правил.
 
-Среди методов, используемых в подсистемах анализа современных систем обнаружения вторжений (СОВ), можно выделить два направления:
+Если классифицировать методы обнаружения вторжения, используемые в системах обнаружения вторжений (СОВ), 
+то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном [...]):
 \begin{itemize}
-	\item обнаружение аномалий в защищаемой системе
-	\item поиск злоупотреблений
+	\item синтаксические методы 
+		К таким методам обычно относятся методы, которые основываются на обнаружения вторжений 
+		путём сравнения SQL-запросов с шаблонами недопустимых синтаксических конструкций.
+	\item методы обнаружения аномалий
+		Такие методы, наоборот, в отличие от первого типа, подрузамевают создание шаблонов нормального 
+		поведения пользователя и последующее сравнение этих шаблонов с действиями, выполняемыми пользователями 
+		во время работы с БД.
+	\item смешанные методы, представляющие собой композицию первых двух
 \end{itemize}
-
-\textbf{Цели выявления злоупотреблений} -- поиск шаблонов известных атак. В качестве искомого шаблона может выступать последовательность событий, паттерны сетевого трафика различных протоколов, определенные ассемблерные команды и т.д.
-
-\textbf{Место процедуры распознавания вторжений в общей системе защиты} -- обнаружение и регистрация атак, а также оповещение при срабатывании определенного правила.
 
 \subsection{Системы распознавания вторжений}
 
