--- a/db.tex
+++ b/db.tex
@@ -14,7 +14,7 @@
 \tableofcontents
 
 \input{part/concept}
-\input{part/basis}
+\import{part/basis/}{basis}
 \input{part/integrity}
 \input{part/confidentiality}
 \input{part/availability}
