Fix definitions and improve classifications

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -100,6 +100,15 @@
 	year      = 2008,
 	isbn      = {9780134794105},}
 
+@article{IDSClassification,
+	author = {Stefan Axelsson},
+	title  = {Intrusion detection systems: a survey and taxonomy},
+	month  = {March},
+	year   = {2000},
+	journal = {Technical Report 99–15},
+	publisher = {Chalmers Univ.},
+}
+
 @article{SDB1989,
 	author = {NABIL R. ADAM, JOHN C. WORTMANN},
 	journal = {ACM Computing Surveys, Vol. 21,},
