--- a/db.tex
+++ b/db.tex
@@ -22,6 +22,6 @@
 \input{part/statistical}
 \input{part/intrusion}
 \input{part/security}
-\input{part/ref}
+% \input{part/ref}
 \printbibliography
 \end{document}
