--- a/part/intrusion.tex
+++ b/part/intrusion.tex
@@ -1,17 +1,24 @@
 \section{Распознавание вторжений в БД}
+
 \subsection{Основные понятия}
 
-\textbf{Обнаружение вторжений} -- процесс выявления действий, которые способны нарушить конфиденциальность, 
-целостность и доступность информации, хранимой в базе данных (БД).
+\textbf{Обнаружение вторжений} (применительно к БД) -- процесс выявления действий, 
+которые способны нарушить конфиденциальность, целостность и доступность информации, 
+хранимой в базе данных (БД).
+
+\textbf{Система обнаружения вторжений} (СОВ) [согласно ФСТЭК] -- программное или программно-техническое 
+средство, реализующие функции автоматизированного обнаружения (блокирования) действий в информационной системе, 
+направленных на преднамеренный доступ к информации, специальные воздействия на информацию (носители информации) 
+в целях ее добывания, уничтожения, искажения и блокирования доступа к ней.
 
 Применение систем обнаружения вторжения относится к реактивным мерам (то есть к таким мерам, которые 
 используются уже после того, как произошел инцидент) для противодействия активности злоумышленника в тех 
-случаях, когда злоумышленник преодолел все проактивные меры. Поэтому обычно системах обнаружения вторжений (СОВ) 
+случаях, когда злоумышленник преодолел все проактивные меры. Поэтому обычно системы обнаружения вторжений 
 являются \textit{вторичным фактором защиты в общей системе защиты} и предназначены для обнаружения и регистрации
 уже произошедних событий, а также оповещение персонала при срабатывании определенных правил.
 
 Если классифицировать методы обнаружения вторжения, используемые в системах обнаружения вторжений (СОВ), 
-то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном [...]):
+то можно выделить три типа (согласно классификации, предложенной Стефаном Аксельсоном \autocite{IDSClassification}):
 \begin{itemize}
 	\item синтаксические методы 
 		К таким методам обычно относятся методы, которые основываются на обнаружения вторжений 
@@ -25,19 +32,44 @@
 
 \subsection{Системы распознавания вторжений}
 
-\textbf{Системы обнаружения и предотвращения вторжений (IPS/IDS)} -- это комплекс программных или аппаратных средств, которые выявляют факты и предотвращают попытки несанкционированного доступа в корпоративную систему.
+Системы обнаружения вторжения (англ. Intrusion Detection System, IDS) и 
+системы предотвращения вторжений (англ. Intrusion Preventation System, IPS) 
+обычно рассматриваются вместе, причем часто под термином система предотвращение вторжений подрузамевается
+расширение систем обнаружения вторжений, так как IPS системы также должны обладать возможностью обнаружения
+вторжений. Иначе говоря, IPS системы являются активными IDS системами.
+
+В IDS системах, система также ответственна за реализацию ответных мер на нарушения: блокировка соединения,
+настрйока межсетевого экрана и прочее. Таким образом,
+
+\textbf{Система обнаружения и предотвращения вторжений (IPS/IDS)} (применительно к БД) -- это 
+программное или программно-техническое средство, предназначенное для выявления фактов 
+неавторизованного доступа и предотвращания попыток несанкционированного доступа к БД.
 
 \subsubsection*{Типы моделей систем распознавания вторжений (ID-систем)}
 
-Системы обнаружения и предотвращения разделяют на:
+Системы обнаружения и предотвращения разделяют на
 
 \begin{itemize}
-	\item \textbf{Сетевые (NIDS)} -- проверке подвергается сетевой трафик с концентратора или коммутатора
-	\item \textbf{Основанные на протоколах (PIDS)} -- предполагает наблюдение за HTTP- и HTTPS-протоколами
-	\item \textbf{Основанные на прикладных протоколах (APIDS)} -- в таких системах проверяются специализированные прикладные протоколы. Например, на веб-сервере с SQL базой данных СОВ будет отслеживать содержимое SQL команд, передаваемых на сервер.
-	\item \textbf{Узловые Host-Based (HIDS)} -- подвергают анализу журналы приложений, состояния хостов, а также системные вызовы.
-	\item \textbf{Гибридные} -- являются композицией нескольких видов систем обнаружения вторжений.
+	\item \textbf{Сетевые СОВ (Network-based IDS, NIDS)} -- системы, 
+	которая занимается проверкой сетевого трафика с концентратора или коммутатора.
+	\item \textbf{Основанные на протоколах СОВ (Protocol-based IDS, PIDS)} -- системы, 
+	которая отслеживает и анализирует коммуникационные протоколы со связанными системами или пользователями.
+	Обычно это предполагает наблюдение за HTTP- и HTTPS-протоколами и анализ соответствующих пакетов.
+	\item \textbf{Основанные на прикладных протоколах СОВ (Application Protocol-based IDS, APIDS)} -- системы, 
+	в которых ведется наблюдения за специализированными прикладными протоколами и анализ соответствующих 
+	данных. Например, на веб-сервере с SQL базой данных СОВ будет отслеживать содержимое SQL команд, 
+	передаваемых на сервер.
+	\item \textbf{Узловые Host-Based, (HIDS)} -- системы, 
+	отслеживающая вторжения, используя анализ системных вызовов, логов приложений, 
+	модификаций файлов (исполняемых, файлов паролей, системных баз данных), 
+	состояния хоста и прочих источников. 
+	\item \textbf{Гибридные} -- системы, которые являются композицией нескольких видов 
+	систем обнаружения вторжений.
 \end{itemize}
+
+% Так на сегодняшний день активно развиваются СОВ, работающие на основе прикладных протоколов, которые используются
+% различными программами. К таким протоколам в частности относится SQL – язык описания запросов к реляционным базам данных.
+
 
 \paragraph{Общая структура ID-систем} 
 
